[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
crossbeam-channel = "0.4.0"
lazy_static = "1.4.0"
noisy_float = "0.1.11"
num-integer = "0.1.41"
permutohedron = "0.2.4"
regex = "1.3.1"
structopt = "0.3.5"

[features]
intcode-debug=[]
debug=[]
